--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,7 @@
   </head>
   <body>
     <button id="refreshButton">Refresh the view</button>
-    <div id="marksContainer">
-      <div class="vision-wrapper">
-        <span class="vision-name">Some name that might be long</span><span class="vision-mark">SOmeMark1</span>
-      </div>
-      <div class="vision-wrapper">
-        <span class="vision-name">Some other name that might be long</span><span class="vision-mark">SOmeMark2</span>
-      </div>
-    </div>
+    <div id="marksContainer"></div>
     <script type="module" src="src/popup/index.js"></script>
   </body>
 </html>
